@@ -20,6 +20,8 @@
 #ifndef __STYLESHEETPARSER_H__
 #define __STYLESHEETPARSER_H__
 
+#include <list>
+
 #include "StyleSheetTable.h"
 
 class ZLInputStream;
@@ -32,12 +34,10 @@ protected:
 public:
 	virtual ~StyleSheetParser();
 	void reset();
-	void parse(ZLInputStream &stream);
 	void parse(const char *text, int len, bool final = false);
 
 protected:
 	virtual void storeData(const std::string &selector, const StyleSheetTable::AttributeMap &map);
-	virtual void processAtRule(const std::string &name, const StyleSheetTable::AttributeMap &map);
 
 private:
 	bool isControlSymbol(const char symbol);
@@ -62,23 +62,59 @@ private:
 friend class StyleSheetSingleStyleParser;
 };
 
-class StyleSheetTableParser : public StyleSheetParser {
-
-public:
-	StyleSheetTableParser(StyleSheetTable &table);
-
-private:
-	void storeData(const std::string &selector, const StyleSheetTable::AttributeMap &map);
-	void processAtRule(const std::string &name, const StyleSheetTable::AttributeMap &map);
-
-private:
-	StyleSheetTable &myTable;
-};
-
 class StyleSheetSingleStyleParser : public StyleSheetParser {
 
 public:
 	shared_ptr<ZLTextStyleEntry> parseString(const char *text);
 };
+
+class StyleSheetMultiStyleParser : public StyleSheetParser {
+
+public:
+	void parseStream(ZLInputStream &stream);
+
+protected:
+	virtual void store(const std::string &tag, const std::string &aClass, const StyleSheetTable::AttributeMap &map) = 0;
+
+private:
+	void storeData(const std::string &selector, const StyleSheetTable::AttributeMap &map);
+	void processAtRule(const std::string &name, const StyleSheetTable::AttributeMap &map);
+};
+
+class StyleSheetTableParser : public StyleSheetMultiStyleParser {
+
+public:
+	StyleSheetTableParser(StyleSheetTable &table);
+
+private:
+	void store(const std::string &tag, const std::string &aClass, const StyleSheetTable::AttributeMap &map);
+
+private:
+	StyleSheetTable &myTable;
+};
+
+class StyleSheetParserWithCache : public StyleSheetMultiStyleParser {
+
+private:
+	struct Entry {
+		const std::string Tag;
+		const std::string Class;
+		const StyleSheetTable::AttributeMap Map;
+
+		Entry(const std::string &tag, const std::string &aClass, const StyleSheetTable::AttributeMap &map);
+	};
+
+public:
+	void applyToTable(StyleSheetTable &table) const;
+
+private:
+	void store(const std::string &tag, const std::string &aClass, const StyleSheetTable::AttributeMap &map);
+
+private:
+	std::list<shared_ptr<Entry> > myEntries;
+};
+
+inline StyleSheetParserWithCache::Entry::Entry(const std::string &tag, const std::string &aClass, const StyleSheetTable::AttributeMap &map) : Tag(tag), Class(aClass), Map(map) {
+}
 
 #endif /* __STYLESHEETPARSER_H__ */
